--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 h1.timer {
 	text-align: center;
 }
+
+.square {
+	height: 200px;
+	width: 200px;
+	color: white;
+	font-size: 50;
+	text-align: center;
+}
