--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ h1.timer {
 	height: 200px;
 	width: 200px;
 	color: white;
-	font-size: 50;
+	font-size: 50px;
 	text-align: center;
+	/* the square is always in the middle of the screen */
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	/* left 50% of it's own width, up 50% of it's own height*/
+	transform: translate(-50%, -50%);
 }
